k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-demo
  template:
    metadata:
      labels:
        app: nextjs-demo
    spec:
      containers:
        - name: app
          image: ghcr.io/mattmcguin/nextjs-hello-world
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
