k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-demo
spec:
  type: ClusterIP
  selector:
    app: nextjs-demo
  ports:
    - name: http
      port: 80
      targetPort: http
